@@ -14,6 +14,11 @@ int fb_hGetCurrentDir( char *dst, int maxlen )
 		for (i=0; i!=len; ++i)
 			if (dst[i]=='/')
 				dst[i]='\\';
+
+		/* make drive letter uppercase */
+		if( dst[1] == ':' )
+			dst[0] = toupper( dst[0] );
+
 		return len;
 	}
 	return 0;
