@@ -235,7 +235,8 @@ Version 0.90.0 (former 0.25.0):
 - BSAVE was returning "file not found" errors on invalid arguments instead of "illegal function call" errors
 - Sub calls were allowing the optional parentheses to start after the first argument, e.g. 'foo a, (b, c)'
 - #668: Internal compiler error on lines such as "END SUB : SUB foo( )" (one procedure closed, and a new one opened, in the same line) when compiling with -g
-- DOS COMMAND(0) was giving '/' for the path separator instead of '\', and a lower-case drive letter
+- DOS COMMAND(0) was giving '/' for the path separator instead of '\'
+- DOS CURDIR and COMMAND(0) return values had a lower-case drive letter
 - EXEPATH() on all platforms was omitting the slash at the end of root paths, resulting in a relative or missing path (e.g. "X:\" -> "X:" or "/" -> "")
 - Hang in exec()/chain() functions on Linux if the target executable isn't found (observed with musl libc)
 - Minor scaling bug when using BSAVE to save 16-bit images to BMP, causing barely visible changes and the potential loss of the least significant green bit
